force-app/main/default/objects/ViabilityStudy__c/ViabilityStudy__c.object-meta.xml
<CustomObject>
    <label>Viabilidade</label>
    <nameField>
        <displayFormat>VS-{0000000}</displayFormat>
        <label>Nome de Viabilidade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Viabilidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>