force-app/main/default/objects/ViabilityStudy__c/fields/AcBranchCost__c.field-meta.xml
<CustomField>
    <fullName>AcBranchCost__c</fullName>
    <label>Custo de Ramal CA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>