force-app/main/default/objects/ViabilityStudy__c/fields/AdditionalCost__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCost__c</fullName>
    <description>Campo para inclusão dos custos adicionais da proposta.</description>
    <inlineHelpText>Campo para inclusão dos custos adicionais da proposta.</inlineHelpText>
    <label>Custo Adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>