force-app/main/default/objects/ViabilityStudy__c/fields/AdequacyCostEnerzee__c.field-meta.xml
<CustomField>
    <fullName>AdequacyCostEnerzee__c</fullName>
    <label>Custo Adequação Enerzee</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ramal CC</fullName>
            </value>
            <value>
                <fullName>Ramal CA</fullName>
            </value>
            <value>
                <fullName>Laudo Estrutural</fullName>
            </value>
            <value>
                <fullName>Adequação Padrão</fullName>
            </value>
            <value>
                <fullName>Cobertura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>