force-app/main/default/objects/ViabilityStudy__c/fields/ApproveDate__c.field-meta.xml
<CustomField>
    <fullName>ApproveDate__c</fullName>
    <label>Data Aprovação</label>
    <type>DateTime</type>
</CustomField>