force-app/main/default/objects/ViabilityStudy__c/fields/CategoryPhase__c.field-meta.xml
<CustomField>
    <fullName>CategoryPhase__c</fullName>
    <label>Categoria (Fase):</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monofásico</fullName>
            </value>
            <value>
                <fullName>Bifásico</fullName>
            </value>
            <value>
                <fullName>Trifásico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>