force-app/main/default/objects/ViabilityStudy__c/fields/CoberturaCost__c.field-meta.xml
<CustomField>
    <fullName>CoberturaCost__c</fullName>
    <label>Custo de Cobertura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>