force-app/main/default/objects/ViabilityStudy__c/fields/Consultor__c.field-meta.xml
<CustomField>
    <fullName>Consultor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consultor responsável pela análise de viabilidade.</description>
    <inlineHelpText>Selecione o consultor ou integrador responsável pela etapa de viabilidade.</inlineHelpText>
    <label>Consultor</label>
    <referenceTo>Consultor__c</referenceTo>
    <relationshipLabel>Viabilidades</relationshipLabel>
    <relationshipName>ViabilityStudies</relationshipName>
    <type>Lookup</type>
</CustomField>