force-app/main/default/objects/ViabilityStudy__c/fields/DataConclusaoViabilidade__c.field-meta.xml
<CustomField>
	<fullName>DataConclusaoViabilidade__c</fullName>
	<description
  >Data oficial de conclusão da Viabilidade (marco de "Viabilidade Finalizada"). Preenchida manualmente ou por automação. Usada no indicador Tempo Médio da Operação de Viabilidade (Engenharia).</description>
	<label>Data de Conclusão da Viabilidade</label>
	<type>Date</type>
</CustomField>