force-app/main/default/objects/ViabilityStudy__c/fields/DateTimeVisit__c.field-meta.xml
<CustomField>
    <fullName>DateTimeVisit__c</fullName>
    <label>Data/Hora da Visita</label>
    <type>DateTime</type>
</CustomField>