force-app/main/default/objects/ViabilityStudy__c/fields/DcBranchCost__c.field-meta.xml
<CustomField>
    <fullName>DcBranchCost__c</fullName>
    <label>Custo de Ramal CC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>