force-app/main/default/objects/ViabilityStudy__c/fields/DiasAteConclusao__c.field-meta.xml
<CustomField>
    <fullName>DiasAteConclusao__c</fullName>
    <description>Tempo em dias corridos entre a criação da Viabilidade e a DataConclusaoViabilidade__c. Usado no indicador Tempo Médio da Operação de Viabilidade (Engenharia). Campo de conclusão populado manualmente ou por automação após deploy.</description>
    <formula>IF(!ISBLANK(DataConclusaoViabilidade__c), DataConclusaoViabilidade__c - DATEVALUE(CreatedDate), NULL)</formula>
    <label>Dias Criação → Conclusão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>