force-app/main/default/objects/ViabilityStudy__c/fields/DurationMinutes__c.field-meta.xml
<CustomField>
    <fullName>DurationMinutes__c</fullName>
    <label>Duração estimada da visita (em minutos)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>