force-app/main/default/objects/ViabilityStudy__c/fields/EstimatedAnnualGeneration__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAnnualGeneration__c</fullName>
    <description>Valor de geração anual estimada informado durante o estudo de viabilidade.</description>
    <label>Geração anual estimada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>