force-app/main/default/objects/ViabilityStudy__c/fields/EstimatedAnnualProduction__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAnnualProduction__c</fullName>
    <description>Produção anual estimada definida durante o estudo de viabilidade.</description>
    <label>Produção anual estimada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>