force-app/main/default/objects/ViabilityStudy__c/fields/EstudoViabilidadeLocal__c.field-meta.xml
<CustomField>
    <fullName>EstudoViabilidadeLocal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estudo de Viabilidade Local</label>
    <type>Checkbox</type>
</CustomField>