force-app/main/default/objects/ViabilityStudy__c/fields/FixationStructureVerifiedPlace__c.field-meta.xml
<CustomField>
    <fullName>FixationStructureVerifiedPlace__c</fullName>
    <label>Estrutura de fixação (verificado in loco</label>
    <type>TextArea</type>
</CustomField>