force-app/main/default/objects/ViabilityStudy__c/fields/HaveIncreasedLoad__c.field-meta.xml
<CustomField>
    <fullName>HaveIncreasedLoad__c</fullName>
    <label>Haverá aumento de carga?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>