force-app/main/default/objects/ViabilityStudy__c/fields/IncreasingNominalPowerSystem__c.field-meta.xml
<CustomField>
    <fullName>IncreasingNominalPowerSystem__c</fullName>
    <description>Haverá aumento da potência nominal do sistema atual?</description>
    <label>Aumento da potência nominal do sistema</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Nâo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>