force-app/main/default/objects/ViabilityStudy__c/fields/InputCircuitBreakerNominalCurrent__c.field-meta.xml
<CustomField>
    <fullName>InputCircuitBreakerNominalCurrent__c</fullName>
    <label>Corrente nominal do disjuntor de entrada</label>
    <type>TextArea</type>
</CustomField>