force-app/main/default/objects/ViabilityStudy__c/fields/InstalledPowerKwp__c.field-meta.xml
<CustomField>
    <fullName>InstalledPowerKwp__c</fullName>
    <label>KWp</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>