force-app/main/default/objects/ViabilityStudy__c/fields/ObservationsPostShading__c.field-meta.xml
<CustomField>
    <fullName>ObservationsPostShading__c</fullName>
    <label>Observações pós-sombreamento:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>