force-app/main/default/objects/ViabilityStudy__c/fields/ObservationsPostVisit__c.field-meta.xml
<CustomField>
    <fullName>ObservationsPostVisit__c</fullName>
    <label>Observações pós-visita:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>