force-app/main/default/objects/ViabilityStudy__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Estudos_de_Viabilidades</relationshipName>
    <type>Lookup</type>
</CustomField>