force-app/main/default/objects/ViabilityStudy__c/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <formula>Opportunity__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo da oportunidade</label>
    <type>Text</type>
</CustomField>