force-app/main/default/objects/ViabilityStudy__c/fields/OtherCosts__c.field-meta.xml
<CustomField>
    <fullName>OtherCosts__c</fullName>
    <label>Outros Custos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>