force-app/main/default/objects/ViabilityStudy__c/fields/OtherCostsDescription__c.field-meta.xml
<CustomField>
    <fullName>OtherCostsDescription__c</fullName>
    <label>Descrição Outros Custos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>