force-app/main/default/objects/ViabilityStudy__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Viabilidades</relationshipName>
    <type>Lookup</type>
</CustomField>