force-app/main/default/objects/ViabilityStudy__c/fields/OwnTeamThirdParty__c.field-meta.xml
<CustomField>
    <fullName>OwnTeamThirdParty__c</fullName>
    <label>Equipe própria ou Terceira?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrador</fullName>
            </value>
            <value>
                <fullName>Enerzee</fullName>
            </value>
            <value>
                <fullName>Consultor</fullName>
            </value>
            <value>
                <fullName>Nao_cadastrado</fullName>
                <label>Não cadastrado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>