force-app/main/default/objects/ViabilityStudy__c/fields/ProposalCondicoesAdicionais__c.field-meta.xml
<CustomField>
    <fullName>ProposalCondicoesAdicionais__c</fullName>
    <description
  >Condições adicionais da proposta. Preenchido na viabilidade e sincronizado para a Oportunidade ao finalizar.</description>
    <label>Condições Adicionais da Proposta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>