force-app/main/default/objects/ViabilityStudy__c/fields/ProposalExclusoes__c.field-meta.xml
<CustomField>
    <fullName>ProposalExclusoes__c</fullName>
    <description
  >Exclusões da proposta. Preenchido na viabilidade e sincronizado para a Oportunidade ao finalizar.</description>
    <label>Exclusões da Proposta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>