force-app/main/default/objects/ViabilityStudy__c/fields/ProposalObservacoes__c.field-meta.xml
<CustomField>
    <fullName>ProposalObservacoes__c</fullName>
    <description
  >Observações da proposta. Preenchido na viabilidade e sincronizado para a Oportunidade ao finalizar.</description>
    <label>Observações da Proposta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>