force-app/main/default/objects/ViabilityStudy__c/fields/SectionNominalCableGage__c.field-meta.xml
<CustomField>
    <fullName>SectionNominalCableGage__c</fullName>
    <label>Seção Nominal (Bitola do cabo):</label>
    <type>TextArea</type>
</CustomField>