force-app/main/default/objects/ViabilityStudy__c/fields/ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>ServiceResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pela Visita</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>Estudos_de_Viabilidades</relationshipName>
    <type>Lookup</type>
</CustomField>