force-app/main/default/objects/ViabilityStudy__c/fields/StandardAdequacyCost__c.field-meta.xml
<CustomField>
    <fullName>StandardAdequacyCost__c</fullName>
    <label>Custo Adequação de Padrão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>