force-app/main/default/objects/ViabilityStudy__c/fields/StationTransformationViability__c.field-meta.xml
<CustomField>
    <fullName>StationTransformationViability__c</fullName>
    <description>Posto de transformação ou disponibilidade de acesso?</description>
    <inlineHelpText>Posto de transformação ou disponibilidade de acesso?</inlineHelpText>
    <label>Transformação ou disponibilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>