force-app/main/default/objects/ViabilityStudy__c/fields/StatusFeasibility__c.field-meta.xml
<CustomField>
    <fullName>StatusFeasibility__c</fullName>
    <label>Status da Viabilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendamento de Visita Técnica</fullName>
                <default>true</default>
                <label>Agendamento de Visita Técnica</label>
            </value>
            <value>
                <fullName>Solicitação de Novo Integrador</fullName>
            </value>
            <value>
                <fullName>Visita Agendada</fullName>
            </value>
            <value>
                <fullName>Aguardando Elaboração de Estudo</fullName>
            </value>
            <value>
                <fullName>Estudo em Elaboração</fullName>
            </value>
            <value>
                <fullName>Viabilidade Finalizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>