force-app/main/default/objects/ViabilityStudy__c/fields/StruturalReport__c.field-meta.xml
<CustomField>
    <fullName>StruturalReport__c</fullName>
    <label>Laudo Estrutural</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>