force-app/main/default/objects/ViabilityStudy__c/fields/TechnicalVisitCost__c.field-meta.xml
<CustomField>
    <fullName>TechnicalVisitCost__c</fullName>
    <label>Custo Visita Técnica</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>