force-app/main/default/objects/ViabilityStudy__c/fields/TextReason__c.field-meta.xml
<CustomField>
    <fullName>TextReason__c</fullName>
    <inlineHelpText>Informe o campo texto de motivo com o resultado do estudo feito pelo técnico de campo, quando o status da viabilidade estiver inviável.</inlineHelpText>
    <label>Texto de Motivo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>