force-app/main/default/objects/ViabilityStudy__c/fields/TextStudy2__c.field-meta.xml
<CustomField>
    <fullName>TextStudy2__c</fullName>
    <inlineHelpText>Texto de estudo com suporte a formatação rich text e imagens. Utilizado para exibição na proposta comercial.</inlineHelpText>
    <label>Texto de Estudo (Rich Text)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>