force-app/main/default/objects/ViabilityStudy__c/fields/TextStudy__c.field-meta.xml
<CustomField>
    <fullName>TextStudy__c</fullName>
    <inlineHelpText>Informe o campo texto de estudo com o resultado do estudo feito pelo técnico de campo, quando o status da viabilidade estiver parcialmente viável.</inlineHelpText>
    <label>Texto de Estudo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>