force-app/main/default/objects/ViabilityStudy__c/fields/ThePatternShouldBeReadjusted__c.field-meta.xml
<CustomField>
    <fullName>ThePatternShouldBeReadjusted__c</fullName>
    <label>O padrão será readequado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>