force-app/main/default/objects/ViabilityStudy__c/fields/TypeWorkProjectFeasibility__c.field-meta.xml
<CustomField>
    <fullName>TypeWorkProjectFeasibility__c</fullName>
    <label>Tipo de Obra/Projeto:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UFV Micro</fullName>
            </value>
            <value>
                <fullName>UFV Mini até 300</fullName>
            </value>
            <value>
                <fullName>UFV Mini acima de 300</fullName>
            </value>
            <value>
                <fullName>Bombeamento</fullName>
            </value>
            <value>
                <fullName>Estação de Recarga</fullName>
            </value>
            <value>
                <fullName>Subestação	Subestação</fullName>
            </value>
            <value>
                <fullName>Padrão de Entrada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>