force-app/main/default/objects/ViabilityStudy__c/fields/VisitResponsibleName__c.field-meta.xml
<CustomField>
    <fullName>VisitResponsibleName__c</fullName>
    <description>Responsável pela VT informado manualmente quando o integrador não está cadastrado.</description>
    <label>Responsável VT (Manual)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>