force-app/main/default/objects/ViabilityStudy__c/validationRules/Require_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Opportunity</fullName>
    <active>false</active>
    <description>Impede estudo de viabilidade sem oportunidade associada, com bypass para perfil administrador (EN/PT-BR).</description>
    <errorConditionFormula>AND(
NOT(
OR(
LOWER($Profile.Name) = &quot;system administrator&quot;,
LOWER($Profile.Name) = &quot;administrador do sistema&quot;
)
),
ISBLANK(Opportunity__c)
)</errorConditionFormula>
    <errorMessage>A Viabilidade deve estar vinculada a uma Oportunidade.</errorMessage>
</ValidationRule>