force-app/main/default/objects/ViabilityStudy__c/validationRules/Valida_preenchimento_TipoObraProjeto.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_preenchimento_TipoObraProjeto</fullName>
    <active>true</active>
    <description
  >Valida o preenchimento do campo Tipo de Obra/Projeto para criação do projeto.</description>
    <errorConditionFormula>AND(
    ISCHANGED( StatusFeasibility__c ),
    ISPICKVAL( StatusFeasibility__c, &apos;Viabilidade Finalizada&apos; ),
    ISBLANK( TypeWorkProjectFeasibility__c ),
    NOT(CONTAINS( ObservationsPostVisit__c, &apos;Encerrado automaticamente&apos; ))
)</errorConditionFormula>
    <errorMessage
  >Campo Tipo de Obra/Projeto deve ser preenchido antes de finalizar a Análise de viabilidade</errorMessage>
</ValidationRule>