force-app/main/default/objects/ViabilityStudy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>ServiceResource__c</columns>
    <columns>StatusFeasibility__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>TypeWorkProjectFeasibility__c</columns>
    <columns>OpportunityType__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>