force-app/main/default/objects/ViabilityStudy__c/listViews/C_pia_de_Tudo.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Tudo</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>ServiceResource__c</columns>
    <columns>StatusFeasibility__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>TypeWorkProjectFeasibility__c</columns>
    <columns>OpportunityType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StatusFeasibility__c</field>
        <operation>equals</operation>
        <value>Agendamento de Visita Técnica</value>
    </filters>
    <label>Agendamento de Visita Técnica</label>
</ListView>