force-app/main/default/objects/ViabilityStudy__c/listViews/Solicita_o_de_novo_integrador.listView-meta.xml
<ListView>
    <fullName>Solicita_o_de_novo_integrador</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>ServiceResource__c</columns>
    <columns>StatusFeasibility__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>TypeWorkProjectFeasibility__c</columns>
    <columns>OpportunityType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StatusFeasibility__c</field>
        <operation>equals</operation>
        <value>Solicitação de Novo Integrador</value>
    </filters>
    <label>Solicitação de novo integrador</label>
</ListView>