force-app/main/default/objects/ViabilityStudy__c/listViews/Status_Visita.listView-meta.xml
<ListView>
    <fullName>Status_Visita</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>ServiceResource__c</columns>
    <columns>StatusFeasibility__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>TypeWorkProjectFeasibility__c</columns>
    <columns>OpportunityType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StatusFeasibility__c</field>
        <operation>equals</operation>
        <value>Visita Agendada</value>
    </filters>
    <label>Visita Agendada</label>
</ListView>